--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI="mongodb+srv://homailson:Escort19862013@cluster0.7fzvhum.mongodb.net/"
+EMAIL="homailson@gmail.com"
+PASSWORD="sjtf yxsl xiis gfop"
